@@ -27,6 +27,8 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 import org.apache.avro.Schema;
 import org.apache.kafka.clients.consumer.CommitFailedException;
@@ -40,7 +42,6 @@ import org.apache.kafka.common.serialization.Deserializer;
 import org.apache.kafka.common.serialization.StringDeserializer;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.FluentIterable;
 
 import com.hotels.road.model.core.Road;
 import com.hotels.road.offramp.api.Payload;
@@ -49,6 +50,7 @@ import com.hotels.road.offramp.api.SchemaProvider;
 import com.hotels.road.offramp.api.UnknownRoadException;
 import com.hotels.road.offramp.model.DefaultOffset;
 import com.hotels.road.offramp.spi.RoadConsumer;
+import com.hotels.road.offramp.utilities.AvroPayloadDecoder;
 
 import lombok.Getter;
 import lombok.NonNull;
@@ -61,7 +63,7 @@ public class KafkaRoadConsumer implements RoadConsumer {
 
   static final String GROUP_ID_PREFIX = "offramp";
   private static final Deserializer<String> keyDeserializer = new StringDeserializer();
-  private static final Deserializer<Payload<byte[]>> valueDeserializer = new PayloadDeserializer();
+  private static final Deserializer<Payload<byte[]>> valueDeserializer = new PayloadKafkaDeserializer();
 
   private final @Getter(PACKAGE) Properties properties;
   private final @Getter(PACKAGE) String topic;
@@ -100,13 +102,17 @@ public class KafkaRoadConsumer implements RoadConsumer {
 
   @Override
   public Iterable<Record> poll() {
-    return FluentIterable.from(consumer.poll(pollTimeoutMillis)).transform(r -> {
-      Payload<byte[]> p = r.value();
-      Schema schema = schemaProvider.schema(roadName, p.getSchemaVersion());
-      JsonNode message = payloadDecoder.decode(schema, p.getMessage());
-      Payload<JsonNode> payload = new Payload<>(p.getFormatVersion(), p.getSchemaVersion(), message);
-      return new Record(r.partition(), r.key(), r.offset(), r.timestamp(), payload);
-    }).toList();
+    return StreamSupport
+        .stream(consumer.poll(pollTimeoutMillis).spliterator(), true)
+        .map(r -> {
+              String key = r.key();
+              Payload<byte[]> p = r.value();
+              Schema schema = schemaProvider.schema(roadName, p.getSchemaVersion());
+              JsonNode message = payloadDecoder.decode(schema, p.getMessage());
+              Payload<JsonNode> payload = new Payload<>(p.getFormatVersion(), p.getSchemaVersion(), message);
+              return new Record(r.partition(), r.offset(), r.timestamp(), key, payload);
+        })
+        .collect(Collectors.toList());
   }
 
   @Override
